assets/queries/k8s/pod_network_policy_not_configured/test/positive_expected_result.json
[
	{
		"queryName": "Pod Is Not Targeted By A Proper Network Policy",
		"severity": "MEDIUM",
		"line": 4,
    "fileName": "positive2.yaml"
	},
  {
		"queryName": "Pod Is Not Targeted By A Proper Network Policy",
		"severity": "MEDIUM",
		"line": 4,
    "fileName": "positive1.yaml"
	}
]
